# krill

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-nix  Makefile  README.md  TODO  devenv.nix  docker-compose.yml  docker.nix  flake.nix  main.py  pyproject.toml  setup.cfg  setup.py  test_sources.txt
.github/workflows/: pr.yml  publish.yml
krill/: combinator.py  krill.py  lexer.py  parser.py
krill/tests/: test_krill.py  test_lexer.py  test_parser.py
src/krill/: expression.py  krill.py  lexer.py  parser.py  utils.py
src/krill/feed/: parser.py
src/krill/sources/: expression.py  lexer.py  parser.py
tests/: test_krill.py  test_lexer.py  test_parser.py
tests/sources/: test_lexer.py  test_parser.py
