[tool.poetry]
name = "krill"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
beautifulsoup4 = "^4.8"
feedparser = "^6.0"
blessings = "^1.7"
cryptography = "^41.0"
unsync = "^1.4.0"
httpx = "^0.27.2"

[tool.poetry.scripts]
krill = 'krill.krill:main'

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ruff = "^0.6.9"
pytest = "^8.3.3"
bpython = "^0.24"
black = "^24.10.0"
isort = "^5.13.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
