[project]
name = "krill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "blessings>=1.7",
    "cryptography>=45.0.2",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "bpython>=0.25",
    "isort>=6.0.1",
    "pdbpp>=0.11.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.10",
]
