[project]
name = "krill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Yokley", email = "kyokley@mars" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "blessings>=1.7",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
krill = "krill.krill:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bpython>=0.25",
    "isort>=6.0.1",
    "pdbpp>=0.11.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.10",
]
